languages/io-automaton-fe/src/test/resources/invalid/AutomatonWithoutState.ioautomaton
package invalid;

automaton AutomatonWithoutState {

    output int i;
    input int x;		
}